--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ keywords = ["japanese", "number", "parser"]
 homepage = "https://github.com/kitagawa-hr/japanese-numbers-converter"
 repository = "https://github.com/kitagawa-hr/japanese-numbers-converter"
 packages = [
-    { include = "jnc.py" }
+    { include = "jnc" },
+    { include = "jnc/py.typed" }
 ]
 
 [tool.poetry.dependencies]
